fixed str unicode comparison issue

--- a/test_implants/complex_sample.html
+++ b/test_implants/complex_sample.html
@@ -1,1 +1,6 @@
 {"key":"command1","val":"params1"},[{"key":"command2a","val":{"vala":"val2b","valb":"val2a"}},{"key":"command2b","val":"params1"}],{"key":"command3","val":{"vala":"stuff","valb":"paramsmore"}}
+
+base64->json->[rot13]
+
+W3sia2V5IjogImNvbW1hbmQxIiwidmFsIjogInBhcmFtczEifSxbeyJrZXkiOiAiY29tbWFuZDJhIiwidmFsIjogeyJ2YWxhIjogInZhbDJiIiwidmFsYiI6ICJ2YWwyYSJ9fSx7ImtleSI6ICJjb21tYW5kMmIiLCJ2YWwiOiAicGFyYW1zMSJ9XSx7ImtleSI6ICJjb21tYW5kMyIsInZhbCI6IHsidmFsYSI6ICJzdHVmZiIsInZhbGIiOiAicGFyYW1zbW9yZSJ9fV0==
+eyJwYnp6bmFxIjoicW5nbiJ9
