fixing problem with recursion

--- a/test_implants/complex_sample.html
+++ b/test_implants/complex_sample.html
@@ -1,6 +1,4 @@
-{"key":"command1","val":"params1"},[{"key":"command2a","val":{"vala":"val2b","valb":"val2a"}},{"key":"command2b","val":"params1"}],{"key":"command3","val":{"vala":"stuff","valb":"paramsmore"}}
+[{"command1":"params1"},[{"command2a":{"params2a1":"val2a1","params2a2":"val2a2"}},{"command2b":"params2b"}],{"command3":{"params3a":"val3a","params3b":"val3b"}}]
+base64->json->rot13
 
-base64->json->[rot13]
-
-W3sia2V5IjogImNvbW1hbmQxIiwidmFsIjogInBhcmFtczEifSxbeyJrZXkiOiAiY29tbWFuZDJhIiwidmFsIjogeyJ2YWxhIjogInZhbDJiIiwidmFsYiI6ICJ2YWwyYSJ9fSx7ImtleSI6ICJjb21tYW5kMmIiLCJ2YWwiOiAicGFyYW1zMSJ9XSx7ImtleSI6ICJjb21tYW5kMyIsInZhbCI6IHsidmFsYSI6ICJzdHVmZiIsInZhbGIiOiAicGFyYW1zbW9yZSJ9fV0==
-eyJwYnp6bmFxIjoicW5nbiJ9
+W3sicGJ6em5hcTEiOiJjbmVuemYxIn0sW3sicGJ6em5hcTJuIjp7ImNuZW56ZjJuMSI6ImlueTJuMSIsImNuZW56ZjJuMiI6ImlueTJuMiJ9fSx7InBienpuYXEybyI6ImNuZW56ZjJvIn1dLHsicGJ6em5hcTMiOnsiY25lbnpmM24iOiJpbnkzbiIsImNuZW56ZjNvIjoiaW55M28ifX1d
